# ompi

ompi/errhandler/: errcode-internal.c  errcode.c
ompi/include/: mpi.h.in
ompi/include/ompi/: constants.h
ompi/mca/coll/libnbc/: nbc_iallreduce.c
ompi/mca/coll/libpnbc_osc/: Makefile.am  coll_libpnbc_osc.h  coll_libpnbc_osc_component.c  coll_libpnbc_osc_win.c  coll_libpnbc_osc_win.h  my_first_test.c  pnbc_osc.c  pnbc_osc_action_common.h  pnbc_osc_action_decrement.c  pnbc_osc_action_get.c  pnbc_osc_action_get.h  pnbc_osc_action_put.c  pnbc_osc_allreduce.c  pnbc_osc_alltoallv_init.c  pnbc_osc_debug.c  pnbc_osc_debug.h  pnbc_osc_get.c  pnbc_osc_get.h  pnbc_osc_helper_info.c  pnbc_osc_helper_info.h  pnbc_osc_iallgather.c  pnbc_osc_iallgatherv.c  pnbc_osc_iallreduce.c  pnbc_osc_ialltoall.c  pnbc_osc_ialltoallv.c  pnbc_osc_ialltoallw.c  pnbc_osc_ibarrier.c  pnbc_osc_ibcast.c  pnbc_osc_iexscan.c  pnbc_osc_igather.c  pnbc_osc_igatherv.c  pnbc_osc_ineighbor_allgather.c  pnbc_osc_ineighbor_allgatherv.c  pnbc_osc_ineighbor_alltoall.c  pnbc_osc_ineighbor_alltoallv.c  pnbc_osc_ineighbor_alltoallw.c  pnbc_osc_internal.h  pnbc_osc_ireduce.c  pnbc_osc_ireduce_scatter.c  pnbc_osc_ireduce_scatter_block.c  (+18 more)
ompi/mca/osc/: osc.h
ompi/mca/osc/base/: base.h  osc_base_init.c
ompi/mca/osc/rdma/: osc_rdma.h  osc_rdma_component.c  osc_rdma_module.c  osc_rdma_passive_target.c  osc_rdma_passive_target.h  osc_rdma_request.h
ompi/mpi/c/: wait.c
ompi/win/: win.c  win.h
